[gd_scene load_steps=11 format=2]

[ext_resource path="res://tscn/AlertDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscn/dialogs/NewLessonDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://tscn/Header.tscn" type="PackedScene" id=3]
[ext_resource path="res://tscn/Body.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://tscn/dialogs/NewSubjectDialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://tscn/dialogs/EditLessonDialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/main_theme.tres" type="Theme" id=8]
[ext_resource path="res://tscn/dialogs/ExportingCSVDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://tscn/dialogs/AboutDialog.tscn" type="PackedScene" id=10]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="App" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" parent="App" instance=ExtResource( 3 )]
margin_right = 1280.0
rect_min_size = Vector2( 720, 30 )

[node name="Body" parent="App" instance=ExtResource( 4 )]

[node name="NewLessonDialog" parent="." instance=ExtResource( 2 )]
visible = false

[node name="EditLessonDialog" parent="." instance=ExtResource( 7 )]
visible = false

[node name="NewSubjectDialog" parent="." instance=ExtResource( 6 )]
visible = false

[node name="ExportingCSVDialog" parent="." instance=ExtResource( 9 )]
visible = false

[node name="ExportDialog" type="FileDialog" parent="."]
margin_left = 223.82
margin_top = 74.591
margin_right = 1086.82
margin_bottom = 646.591
popup_exclusive = true
window_title = "Enregistrer un fichier"
resizable = true
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/home/moi-xps/Godot/schedule-manager"
current_path = "/home/moi-xps/Godot/schedule-manager/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportDialogCSV" type="FileDialog" parent="."]
margin_left = 223.82
margin_top = 74.591
margin_right = 1086.82
margin_bottom = 646.591
popup_exclusive = true
window_title = "Enregistrer un fichier"
resizable = true
access = 2
filters = PoolStringArray( "*.csv" )
current_dir = "/home/moi-xps/Godot/schedule-manager"
current_path = "/home/moi-xps/Godot/schedule-manager/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportDialog" type="FileDialog" parent="."]
margin_left = 223.82
margin_top = 74.591
margin_right = 1086.82
margin_bottom = 646.591
popup_exclusive = true
window_title = "Importer des cours"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/home/moi-xps/Godot/schedule-manager"
current_path = "/home/moi-xps/Godot/schedule-manager/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertDialog" parent="." instance=ExtResource( 1 )]
visible = false

[node name="AboutDialog" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="open_exporting_csv_file_dialog" from="ExportingCSVDialog" to="." method="_on_ExportingCSVDialog_open_exporting_csv_file_dialog"]
[connection signal="file_selected" from="ExportDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="ExportDialogCSV" to="." method="_on_ExportDialogCSV_file_selected"]
[connection signal="file_selected" from="ImportDialog" to="." method="_on_ImportDialog_file_selected"]
